# neo-rethinkdb

./: .gitignore  Cargo.toml  README.md  tarpaulin-report.html
examples/: Cargo.toml
examples/actix-example/: Cargo.toml
examples/actix-example/src/: main.rs
examples/models/: Cargo.toml
examples/models/src/: lib.rs  post.rs
neor/: Cargo.toml  README.md
neor-macros/: Cargo.toml
neor-macros/src/: lib.rs  options.rs
neor/src/: cmd.rs  command_tools.rs  connection.rs  constants.rs  err.rs  lib.rs  prelude.rs  proto.rs
neor/tests/: test_add.rs  test_and.rs  test_append.rs  test_args.rs  test_array.rs  test_asc.rs  test_avg.rs  test_between.rs  test_binary.rs  test_bit_and.rs  test_bit_not.rs  test_bit_or.rs  test_bit_sal.rs  test_bit_sar.rs  test_bit_xor.rs  test_bracket.rs  test_branch.rs  test_build_query.rs  test_ceil.rs  test_change_at.rs  test_changes.rs  test_coerce_to.rs  test_concat_map.rs  test_config.rs  test_contains.rs  test_count.rs  test_date.rs  test_day.rs  test_day_of_week.rs  test_day_of_year.rs  test_db.rs  test_db_create.rs  test_db_drop.rs  test_db_list.rs  test_default.rs  test_delete.rs  test_delete_at.rs  test_desc.rs  test_difference.rs  test_distance.rs  (+123 more)
reql-macros/: Cargo.toml
reql-macros/src/: lib.rs
reql-rust/: Cargo.toml
reql-rust-macros/: Cargo.toml
reql-rust-macros/src/: document.rs  geometry.rs  lib.rs
reql-rust-macros/src/func/: mod.rs
reql-rust-types/: Cargo.toml
reql-rust-types/src/: db_config.rs  lib.rs
reql-rust/examples/: database.rs  index.rs  selecting_data.rs  table.rs  time.rs  write_hook.rs  writing_data.rs
reql-rust/src/: cmd.rs  connection.rs  constants.rs  document.rs  err.rs  lib.rs  ops.rs  prelude.rs  proto.rs  sequence.rs  spec.rs  types.rs
reql-rust/src/cmd/: and.rs  append.rs  args.rs  asc.rs  avg.rs  between.rs  binary.rs  bit_not.rs  bit_sal.rs  bit_sar.rs  bracket.rs  branch.rs  change_at.rs  changes.rs  circle.rs  close.rs  coerce_to.rs  concat_map.rs  config.rs  connect.rs  contains.rs  count.rs  db.rs  db_create.rs  db_drop.rs  db_list.rs  default.rs  delete.rs  delete_at.rs  difference.rs  distance.rs  distinct.rs  do_.rs  downcase.rs  eq_join.rs  fill.rs  filter.rs  floor.rs  fold.rs  for_each.rs  (+83 more)
reql-rust/src/ops/: document.rs  mod.rs  sequence.rs
reql-rust/src/types/: binary.rs  datetime.rs  group_stream.rs  point.rs  sequence.rs
reql-rust/tests/: changefeeds.rs  concurrency.rs  do.rs  index_create.rs  order_by.rs  table.rs
src/: cmd.rs  connection.rs  constants.rs  err.rs  lib.rs  prelude.rs  proto.rs  spec.rs  types.rs
src/arguments/: mod.rs
src/cmd/: add.rs  and.rs  append.rs  args.rs  asc.rs  avg.rs  between.rs  binary.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_sal.rs  bit_sar.rs  bit_xor.rs  bracket.rs  branch.rs  ceil.rs  change_at.rs  changes.rs  circle.rs  concat_map.rs  config.rs  connect.rs  contains.rs  count.rs  date.rs  day.rs  day_of_week.rs  day_of_year.rs  db.rs  db_create.rs  db_drop.rs  default.rs  delete.rs  desc.rs  (+123 more)
tests/: make_query.rs  run.rs
(+185 files in other folders)
