[package]
name = "reql-rust-macros"
description = "Macros for the reql-rust crate"
version = "0.0.1"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/exytech/community/rethinkdb-for-rust"
documentation = ""
authors = ["SOCGNA KOUYEM Childéric <socgnachilderic@protonmail.com>"]
edition = "2021"

[dependencies]
quote = "1.0.18"
syn = { version = "1.0.95", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
proc-macro2 = "1.0.39"

[lib]
proc-macro = true
