[package]
name = "reql-rust-types"
description = "Some useful types to use along with the reql-rust crate"
version = "0.0.1"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/exytech/community/rethinkdb-for-rust"
documentation = ""
authors = ["SOCGNA KOUYEM Childéric <socgnachilderic@protonmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
base64 = "0.13.0"
time = { version = "0.3.9", features = ["macros", "formatting", "parsing"] }

[features]
