[package]
name = "reql-rust"
description = "A open-source ReQL driver"
version = "0.0.1"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/exytech/community/rethinkdb-for-rust"
documentation = ""
readme = "README.md"
keywords = ["async", "database", "rethinkdb", "reql", "reql-rust", "driver"]
categories = ["database"]
authors = ["SOCGNA KOUYEM Childéric <socgnachilderic@proton.me>"]
edition = "2018"

[dependencies]
async-native-tls = "0.4.0"
async-net = "1.6.1"
async-stream = "0.3.3"
dashmap = "5.3.3"
futures = "0.3.21"
ql2 = "2.1.1"
regex = "1.5.6"
reql-rust-macros = { version = "0.0.1", path = "../reql-rust-macros" }
reql-rust-types = { version = "0.0.1", path = "../reql-rust-types" }
scram = "0.6.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["time"] }
tracing = "0.1.34"

[dev-dependencies]
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = "0.3.11"
