[package]
name = "actix-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
models = { path = "../models" }
serde = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
